--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
 EMAIL_USER=onuraa79@gmail.com
-EMAIL_PASS=123456
-DB_USER=postgres
-DB_HOST=localhost
-DB_NAME=users_db
-DB_PASS=123456
+EMAIL_PASS=f9fc73f85d24389f62b8e26f8db2441c
+DB_USER=users_db_152v_user
+DB_HOST=dpg-d0chm2euk2gs739927sg-a
+DB_NAME=users_db_152v
+DB_PASS=xzo5rAYNBbSS1CVrzEtzFu38sv5FE4pg
 DB_PORT=5432
 JWT_SECRET=supersecretkey
 REACT_APP_TMDB_API_KEY= 6682424ad5c652959eba926198c09bb8
 CLIENT_ID=c248410af57448d0bc8ff0e7d6c7f812
 CLIENT_SECRET=b71e9b01fe03426287858a08b1405015
+REACT_APP_API_URL=https://backend-5xej.onrender.com
