--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
@@ -16,8 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "natural": "^6.10.0",
     "nodemailer": "^6.9.7",
-    "pg": "^8.11.3",
-    "stopwords-tr": "^1.0.0"
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
